Add tarball installer support
